Added emtrends for bleaching effects on fish biomass

--- a/fish_nutrition.Rmd
+++ b/fish_nutrition.Rmd
@@ -38,7 +38,7 @@ fish_df <- fish_df %>%
                                  Site == "lter_4" ~ "East",
                                  Site == "lter_5" ~ "West",
                                  Site == "lter_6" ~ "West"))
-fish_df$Coast = as.factor(fish_df$Coast)
+fish_df$Coast <- as.factor(fish_df$Coast)
 
 # some weird -1 values for biomass - these are negligible but affect anlyses later on. Absolute value to deal with them
 fish_df$Biomass <- abs(fish_df$Biomass)
@@ -182,7 +182,7 @@ fisheries_gam <- gamm(Biomass_total ~ s(Year, by = Coast) + Coast , correlation 
 summary(fisheries_gam$lme)
 plot(fisheries_gam$gam)
 
-# effects of disturbance
+#### effects of disturbance ----
 
 
 
@@ -268,6 +268,33 @@ Anova(bl_fisheries_mod)
 plot(allEffects(bl_fisheries_mod))
 performance::r2(bl_fisheries_mod) # R2m = 0.14, R2c = 0.56
 emtrends(bl_fisheries_mod, pairwise ~ Coast | Bleaching, var = "Year_centered")
+# $contrasts
+# Bleaching = Post-disturbance:
+#  contrast     estimate    SE  df z.ratio p.value
+#  East - North -0.09556 0.116 Inf  -0.821  0.6898
+#  East - West  -0.10722 0.115 Inf  -0.934  0.6185
+#  North - West -0.01166 0.117 Inf  -0.100  0.9945
+# 
+# Bleaching = Pre-disturbance:
+#  contrast     estimate    SE  df z.ratio p.value
+#  East - North  0.00176 0.116 Inf   0.015  0.9999
+#  East - West   0.03881 0.123 Inf   0.317  0.9462
+#  North - West  0.03706 0.122 Inf   0.304  0.9502
+
+emtrends(bl_fisheries_mod, pairwise ~ Bleaching | Coast, var = "Year_centered")
+# $contrasts
+# Coast = East:
+#  contrast                               estimate    SE  df z.ratio p.value
+#  (Post-disturbance) - (Pre-disturbance)  -0.0344 0.115 Inf  -0.299  0.7651
+# 
+# Coast = North:
+#  contrast                               estimate    SE  df z.ratio p.value
+#  (Post-disturbance) - (Pre-disturbance)   0.0630 0.117 Inf   0.540  0.5893
+# 
+# Coast = West:
+#  contrast                               estimate    SE  df z.ratio p.value
+#  (Post-disturbance) - (Pre-disturbance)   0.1117 0.122 Inf   0.915  0.3601
+
 # extract info needed to plot slopes
 bleaching_emm <- emmeans::emmip(bl_fisheries_mod,
                    Bleaching | Coast ~ Year_centered,
