--- a/fish_nutrition.Rmd
+++ b/fish_nutrition.Rmd
@@ -55,8 +55,11 @@ fish_df$Unique_ID <- as.factor(paste0(fish_df$Year, "-", fish_df$Transect_ID))
 # read in fisheries data from organized cnh data
 cnh <- read.csv(here::here("data", "annotated_roadside_fish_cnh.csv"), na.strings=c("","NA"))
 
-# extract species that were IDed to lowest taxonomic resolution
-target_species <- unique(na.omit(cnh$species))
+# read in inferred species from Katrina's research
+inferred <- read.csv(here::here("data", "inferred_species_list.csv"), na.strings=c("","NA"))
+
+# extract species that were IDed to lowest taxonomic resolution, concatenate inferred species, remove duplicates
+target_species <- unique(c(unique(na.omit(cnh$species)), inferred$species))
 
 # extract nutrient data for those fish
 nutrients <- rfishbase::estimate(target_species) %>% dplyr::select(Species, Calcium:Zinc_u95)
@@ -171,9 +174,9 @@ summary(fisheries_biomass_glmer)
 Anova(fisheries_biomass_glmer)
 
 #             Chisq Df Pr(>Chisq)    
-# Year       22.297  1  2.336e-06 ***
-# Coast      15.520  2  0.0004265 ***
-# Year:Coast 26.606  2  1.669e-06 ***
+# Year       102.4204  1  < 2.2e-16 ***
+# Coast        7.2012  2    0.02731 *  
+# Year:Coast  33.0234  2  6.746e-08 ***
 
 plot(allEffects(fisheries_biomass_glmer))
 
@@ -192,10 +195,10 @@ bl_fisheries_biomass <- subset(total_fisheries_biomass, is.na(total_fisheries_bi
 
 # create new variable to model slopes - year_centered, refers to year relative to disturbance
 cc_fisheries_biomass <- cc_fisheries_biomass %>%
-  mutate(Year_centered = ifelse(Cyclone == "Pre-disturbance", Year - 2005, Year - 2010))
+  mutate(Year_centered = ifelse(Cyclone == "Pre-disturbance", Year - 2006, Year - 2011))
 
 bl_fisheries_biomass <- bl_fisheries_biomass %>%
-  mutate(Year_centered = ifelse(Bleaching == "Pre-disturbance", Year - 2015, Year - 2019))
+  mutate(Year_centered = ifelse(Bleaching == "Pre-disturbance", Year - 2016, Year - 2020))
 
 
 # model
@@ -203,54 +206,55 @@ cc_fisheries_mod <- glmmTMB(Biomass_total ~ Year_centered*Cyclone*Coast + (1|Tra
 summary(cc_fisheries_mod)
 Anova(cc_fisheries_mod)
 #                               Chisq Df Pr(>Chisq)    
-# Year_centered                0.3201  1  0.5715610    
-# Cyclone                     18.4966  1  1.702e-05 ***
-# Coast                       17.2299  2  0.0001814 ***
-# Year_centered:Cyclone        2.6620  1  0.1027720    
-# Year_centered:Coast          5.2956  2  0.0708074 .  
-# Cyclone:Coast               10.9865  2  0.0041145 ** 
-# Year_centered:Cyclone:Coast  1.9410  2  0.3788985   
-performance::r2(cc_fisheries_mod) # R2m = 0.20, R2c = 0.55
+# Year_centered                0.0630  1  0.8017850    
+# Cyclone                     22.3122  1  2.317e-06 ***
+# Coast                        9.2740  2  0.0096868 ** 
+# Year_centered:Cyclone        6.8160  1  0.0090344 ** 
+# Year_centered:Coast          6.7083  2  0.0349394 *  
+# Cyclone:Coast               17.7883  2  0.0001372 ***
+# Year_centered:Cyclone:Coast  0.4060  2  0.8162796    
+performance::r2(cc_fisheries_mod) # R2m = 0.16, R2c = 0.54
+plot(allEffects(cc_fisheries_mod))
 
 ### within factor pairwise comparisons
 emtrends(cc_fisheries_mod, pairwise ~ Coast | Cyclone, var = "Year_centered")
 # $contrasts
 # Cyclone = Post-disturbance:
 #  contrast     estimate     SE  df z.ratio p.value
-#  East - North  0.07979 0.0966 Inf   0.826  0.6868
-#  East - West  -0.00848 0.1023 Inf  -0.083  0.9962
-#  North - West -0.08826 0.1002 Inf  -0.881  0.6521
+#  East - North   0.1585 0.1055 Inf   1.503  0.2897
+#  East - West    0.0743 0.1110 Inf   0.669  0.7812
+#  North - West  -0.0842 0.1028 Inf  -0.819  0.6911
 # 
 # Cyclone = Pre-disturbance:
 #  contrast     estimate     SE  df z.ratio p.value
-#  East - North  0.24084 0.1000 Inf   2.409  0.0423
-#  East - West   0.16752 0.0981 Inf   1.707  0.2025
-#  North - West -0.07332 0.1019 Inf  -0.719  0.7520
+#  East - North   0.2066 0.1018 Inf   2.028  0.1054
+#  East - West    0.1696 0.0996 Inf   1.702  0.2043
+#  North - West  -0.0370 0.1030 Inf  -0.359  0.9314
 
 emtrends(cc_fisheries_mod, pairwise ~ Cyclone | Coast, var = "Year_centered")
 # $contrasts
 # Coast = East:
-#  contrast                               estimate     SE  df z.ratio p.value
-#  (Post-disturbance) - (Pre-disturbance)  -0.0151 0.0976 Inf  -0.155  0.8770
+#  contrast                               estimate    SE  df z.ratio p.value
+#  (Post-disturbance) - (Pre-disturbance)    0.109 0.106 Inf   1.025  0.3055
 # 
 # Coast = North:
-#  contrast                               estimate     SE  df z.ratio p.value
-#  (Post-disturbance) - (Pre-disturbance)   0.1459 0.0993 Inf   1.470  0.1417
+#  contrast                               estimate    SE  df z.ratio p.value
+#  (Post-disturbance) - (Pre-disturbance)    0.157 0.101 Inf   1.551  0.1208
 # 
 # Coast = West:
-#  contrast                               estimate     SE  df z.ratio p.value
-#  (Post-disturbance) - (Pre-disturbance)   0.1609 0.1035 Inf   1.554  0.1203
+#  contrast                               estimate    SE  df z.ratio p.value
+#  (Post-disturbance) - (Pre-disturbance)    0.204 0.105 Inf   1.940  0.0524
 
 # extract info needed to plot slopes
 cyclone_emm <- emmeans::emmip(cc_fisheries_mod,
                    Cyclone | Coast ~ Year_centered,
-                   at = list(Year_centered = seq(1,5,0.1)), plotit = F, CIs = T)
+                   at = list(Year_centered = seq(1,5,0.01)), plotit = F, CIs = T)
 # back-transform modeled response variable 
 cyclone_emm$yvar_trans <- exp(cyclone_emm$yvar)
 
 # backtransform year_centered to the actual year for plotting
 cyclone_emm <- cyclone_emm %>%
-  mutate(Year = ifelse(Cyclone == "Pre-disturbance", Year_centered + 2005, Year_centered + 2010))
+  mutate(Year = ifelse(Cyclone == "Pre-disturbance", Year_centered + 2005, Year_centered + 2009.01))
 
 
 
@@ -258,62 +262,66 @@ bl_fisheries_mod <- glmmTMB(Biomass_total ~ Year_centered*Bleaching*Coast + (1|T
 summary(bl_fisheries_mod)
 Anova(bl_fisheries_mod)
 #                                 Chisq Df Pr(>Chisq)   
-# Year_centered                  0.3917  1   0.531410   
-# Bleaching                      6.9745  1   0.008268 **
-# Coast                         10.4443  2   0.005396 **
-# Year_centered:Bleaching        0.4208  1   0.516558   
-# Year_centered:Coast            0.3750  2   0.829023   
-# Bleaching:Coast                9.1085  2   0.010522 * 
-# Year_centered:Bleaching:Coast  0.7990  2   0.670659   
+# Year_centered                  1.4993  1   0.220786   
+# Bleaching                      9.8649  1   0.001685 **
+# Coast                          4.4570  2   0.107690   
+# Year_centered:Bleaching        0.1600  1   0.689151   
+# Year_centered:Coast            1.8432  2   0.397877   
+# Bleaching:Coast               13.3504  2   0.001262 **
+# Year_centered:Bleaching:Coast  2.9230  2   0.231883   
 plot(allEffects(bl_fisheries_mod))
 performance::r2(bl_fisheries_mod) # R2m = 0.14, R2c = 0.56
 emtrends(bl_fisheries_mod, pairwise ~ Coast | Bleaching, var = "Year_centered")
 # $contrasts
 # Bleaching = Post-disturbance:
 #  contrast     estimate    SE  df z.ratio p.value
-#  East - North -0.09556 0.116 Inf  -0.821  0.6898
-#  East - West  -0.10722 0.115 Inf  -0.934  0.6185
-#  North - West -0.01166 0.117 Inf  -0.100  0.9945
+#  East - North  -0.2505 0.125 Inf  -2.004  0.1112
+#  East - West   -0.2169 0.124 Inf  -1.755  0.1850
+#  North - West   0.0336 0.121 Inf   0.277  0.9586
 # 
 # Bleaching = Pre-disturbance:
 #  contrast     estimate    SE  df z.ratio p.value
-#  East - North  0.00176 0.116 Inf   0.015  0.9999
-#  East - West   0.03881 0.123 Inf   0.317  0.9462
-#  North - West  0.03706 0.122 Inf   0.304  0.9502
+#  East - North   0.0220 0.122 Inf   0.181  0.9821
+#  East - West    0.0341 0.128 Inf   0.266  0.9617
+#  North - West   0.0121 0.125 Inf   0.097  0.9948
 
 emtrends(bl_fisheries_mod, pairwise ~ Bleaching | Coast, var = "Year_centered")
 # $contrasts
 # Coast = East:
 #  contrast                               estimate    SE  df z.ratio p.value
-#  (Post-disturbance) - (Pre-disturbance)  -0.0344 0.115 Inf  -0.299  0.7651
+#  (Post-disturbance) - (Pre-disturbance)  -0.2071 0.127 Inf  -1.633  0.1025
 # 
 # Coast = North:
 #  contrast                               estimate    SE  df z.ratio p.value
-#  (Post-disturbance) - (Pre-disturbance)   0.0630 0.117 Inf   0.540  0.5893
+#  (Post-disturbance) - (Pre-disturbance)   0.0654 0.120 Inf   0.543  0.5868
 # 
 # Coast = West:
 #  contrast                               estimate    SE  df z.ratio p.value
-#  (Post-disturbance) - (Pre-disturbance)   0.1117 0.122 Inf   0.915  0.3601
+#  (Post-disturbance) - (Pre-disturbance)   0.0439 0.126 Inf   0.349  0.7272
 
 # extract info needed to plot slopes
 bleaching_emm <- emmeans::emmip(bl_fisheries_mod,
                    Bleaching | Coast ~ Year_centered,
-                   at = list(Year_centered = seq(1,4,0.1)), plotit = F, CIs = T)
+                   at = list(Year_centered = seq(1,4,0.01)), plotit = F, CIs = T)
 # back-transform modeled response variable 
 bleaching_emm$yvar_trans <- exp(bleaching_emm$yvar)
 # backtransform year_centered to the actual year for plotting
 bleaching_emm <- bleaching_emm %>%
-  mutate(Year = ifelse(Bleaching == "Pre-disturbance", Year_centered + 2015, Year_centered + 2019))
+  mutate(Year = ifelse(Bleaching == "Pre-disturbance", Year_centered + 2015, Year_centered + 2018.01))
 
 ```
 
 ```{r plot models}
 (cyclone_biomass <-
-   ggplot(data = cyclone_emm) +
-   geom_line(aes(x = Year, y = yvar_trans, colour = Coast)) +
-   geom_ribbon(aes(x = Year, ymin = exp(LCL), ymax = exp(UCL), fill = Coast), alpha = 0.5) +
+   ggplot() +
+   geom_line(data = subset(cyclone_emm, Cyclone == "Pre-disturbance"), aes(x = Year, y = yvar_trans, colour = Coast)) +
+   geom_ribbon(data = subset(cyclone_emm, Cyclone == "Pre-disturbance"),
+               aes(x = Year, ymin = exp(LCL), ymax = exp(UCL), fill = Coast), alpha = 0.5) +
+   geom_line(data = subset(cyclone_emm, Cyclone == "Post-disturbance"), aes(x = Year, y = yvar_trans, colour = Coast)) +
+   geom_ribbon(data = subset(cyclone_emm, Cyclone == "Post-disturbance"),
+               aes(x = Year, ymin = exp(LCL), ymax = exp(UCL), fill = Coast), alpha = 0.5) +
    geom_vline(xintercept = 2010, linetype = 2, colour = "black", size = 1) +
-   labs(y = "Biomass (g) \n",
+   labs(y = "Estimated Biomass (g) \n",
         x = "Year", title = "b. COTS and Cyclone") +
    scale_x_continuous(breaks = seq(2006, 2015, 3)) +
    theme_classic()  +
@@ -333,11 +341,15 @@ bleaching_emm <- bleaching_emm %>%
 )
 
 (bleaching_biomass <-
-   ggplot(data = bleaching_emm) +
-   geom_line(aes(x = Year, y = yvar_trans, colour = Coast)) +
-   geom_ribbon(aes(x = Year, ymin = exp(LCL), ymax = exp(UCL), fill = Coast), alpha = 0.5) +
+   ggplot() +
+   geom_line(data = subset(bleaching_emm, Bleaching == "Pre-disturbance"), aes(x = Year, y = yvar_trans, colour = Coast)) +
+   geom_ribbon(data = subset(bleaching_emm, Bleaching == "Pre-disturbance"),
+               aes(x = Year, ymin = exp(LCL), ymax = exp(UCL), fill = Coast), alpha = 0.5) +
+  geom_line(data = subset(bleaching_emm, Bleaching == "Post-disturbance"), aes(x = Year, y = yvar_trans, colour = Coast)) +
+   geom_ribbon(data = subset(bleaching_emm, Bleaching == "Post-disturbance"),
+               aes(x = Year, ymin = exp(LCL), ymax = exp(UCL), fill = Coast), alpha = 0.5) +
    geom_vline(xintercept = 2019, linetype = 2, colour = "red", size = 1) +
-   labs(y = "Biomass (g) \n",
+   labs(y = "Estimated Biomass (g) \n",
         x = "Year", title = "c. Bleaching") +
    scale_x_continuous(breaks = seq(2015, 2023, 3)) +
    theme_classic()  +
@@ -357,10 +369,12 @@ bleaching_emm <- bleaching_emm %>%
 )
 
 ```
+
+
 ```{r biomass panel v2, fig.height = 10, fig.width=13}
 (model_panel <-
   ggpubr::ggarrange(fisheries_biomass_plot, ggarrange(cyclone_biomass, bleaching_biomass, nrow = 1, ncol = 2, legend = "none"), ncol = 1, nrow = 2, common.legend = T, legend = "bottom", heights = c(0.45, 0.55)))
-# ggsave(filename = "output/biomass_panel_v3.png", model_panel, height = 10, width = 13)
+# ggsave(filename = "output/biomass_panel_v4.png", model_panel, height = 10, width = 13)
 ```
 
 
@@ -425,12 +439,12 @@ fish_rows_to_remove <- rowSums(fish_matrix) == 0 # check if there are any rows w
 # conduct permanova
 adonis2(fish_matrix ~ Year*Coast, data = target_fisheries_wide, method = "bray")
 
-#             Df SumOfSqs      R2       F Pr(>F)    
-# Year         1    4.423 0.02969 27.5679  0.001 ***
-# Coast        2    5.788 0.03885 18.0381  0.001 ***
-# Year:Coast   2    1.606 0.01078  5.0055  0.001 ***
-# Residual   855  137.163 0.92069                   
-# Total      860  148.979 1.00000             
+#            Df SumOfSqs      R2       F Pr(>F)    
+#Year         1    4.567 0.02846 26.2969  0.001 ***
+#Coast        2    5.633 0.03510 16.2170  0.001 ***
+#Year:Coast   2    1.597 0.00995  4.5987  0.001 ***
+#Residual   856  148.665 0.92648                   
+#Total      861  160.462 1.00000          
 
 #### compare effects of specific disturbances
 
@@ -450,9 +464,12 @@ cc_fish_matrix <- fish_matrix[which(rownames(fish_matrix) %in% cc_comb$Unique_ID
 # test effects of cyclone
 adonis2(cc_fish_matrix ~ Coast*Pre.post, data = cc_comb, method = "bray")
 #                 Df SumOfSqs      R2       F Pr(>F)    
-# Coast            2    4.891 0.05779 15.2506  0.001 ***
-# Pre.post         1    3.382 0.03996 21.0895  0.001 ***
-# Coast:Pre.post   2    0.828 0.00979  2.5825  0.004 ** 
+# Coast            2    4.641 0.05110 13.3575  0.001 ***
+# Pre.post         1    3.382 0.03724 19.4659  0.001 ***
+# Coast:Pre.post   2    0.800 0.00881  2.3018  0.002 ** 
+# Residual       472   82.002 0.90286                   
+# Total          477   90.825 1.00000                   
+
 
 
 
@@ -471,10 +488,12 @@ bl_fish_matrix <- fish_matrix[which(rownames(fish_matrix) %in% bl_comb$Unique_ID
 
 # test effects of bleaching
 adonis2(bl_fish_matrix ~ Coast*Pre.post, data = bl_comb, method = "bray")
-#                 Df SumOfSqs      R2       F Pr(>F)    
-# Coast            2    2.240 0.03598 7.1950  0.001 ***
-# Pre.post         1    0.789 0.01267 5.0661  0.001 ***
-# Coast:Pre.post   2    0.391 0.00629 1.2572  0.252    
+#                 Df SumOfSqs      R2      F Pr(>F)    
+# Coast            2    2.376 0.03514 7.0265  0.001 ***
+# Pre.post         1    0.924 0.01367 5.4656  0.001 ***
+# Coast:Pre.post   2    0.403 0.00596 1.1918  0.289    
+# Residual       378   63.897 0.94523                  
+# Total          383   67.599 1.00000      
 
 
 
@@ -493,7 +512,7 @@ adonis2(bl_fish_matrix ~ Coast*Pre.post, data = bl_comb, method = "bray")
 
 set.seed(1032) 
 fish_ord_4 <- metaMDS(fish_matrix, dist	= "bray", k = 4) 
-fish_ord_4 # stress = 0.145 - still high but much better - going 4D
+fish_ord_4 # stress = 0.15 - still high but much better - going 4D
 
 # extract species scores
 fish.species.scores <- as.data.frame(scores(fish_ord_4, "species")) 
@@ -518,7 +537,7 @@ fish.cent <- merge(fish.cent, meta_df, by = "Coast_year")
   geom_text_repel(fish.species.scores, mapping = aes(x = NMDS1, y = NMDS2, label = Species), max.overlaps = 14, alpha = 0.5) +
   geom_path(fish.cent, mapping = aes(x = NMDS1, y = NMDS2, colour = Coast),
             arrow = arrow(length=unit(0.4,"cm"), ends="last", type = "closed"), size = 1) +
-  geom_text(aes(x = 2.1, y = 1.2, label = "Stress = 0.14\nYear - P = 0.001\nCoast - P = 0.001\nYear X Coast - P = 0.001"),
+  geom_text(aes(x = 2, y = 1.1, label = "Stress = 0.15\nYear - P = 0.001\nCoast - P = 0.001\nYear X Coast - P = 0.001"),
             hjust = 1, size = 5) +
   labs(title = "a. Fish community") +
   theme_bw() + 
@@ -553,7 +572,7 @@ cc_fish_matrix <- cc_fish_matrix[,!cc_fish_cols_to_remove] # remove those specie
 
 set.seed(1032) 
 cc_fish_ord_4 <- metaMDS(cc_fish_matrix, dist	= "bray", k = 4) 
-cc_fish_ord_4 # stress = 0.14 - best
+cc_fish_ord_4 # stress = 0.15 - best
 
 # extract species scores
 cc_fish.species.scores <- as.data.frame(scores(cc_fish_ord_4, "species")) 
@@ -596,7 +615,7 @@ bl_fish_matrix <- bl_fish_matrix[,!bl_fish_cols_to_remove] # remove those specie
 
 set.seed(1032) 
 bl_fish_ord_4 <- metaMDS(bl_fish_matrix, dist	= "bray", k = 4) 
-bl_fish_ord_4 # stress = 0.13 - best
+bl_fish_ord_4 # stress = 0.14 - best
 
 # extract species scores
 bl_fish.species.scores <- as.data.frame(scores(bl_fish_ord_4, "species")) 
@@ -631,7 +650,7 @@ bl_fish.cent <- merge(bl_fish.cent, meta_df, by = "Coast_year")
   geom_text_repel(fish.species.scores, mapping = aes(x = NMDS1, y = NMDS2, label = Species), max.overlaps = 15, alpha = 0.5) +
   geom_path(cc_fish.cent, mapping = aes(x = NMDS1, y = NMDS2, colour = Coast),
             arrow = arrow(length=unit(0.4,"cm"), ends="last", type = "closed"), size = 1) +
-  geom_text(aes(x = -1.4, y = -1.3, label = "Stress = 0.14\nDisturbance - P = 0.001\nCoast - P = 0.001\nDisturbance X Coast - P = 0.004"),
+  geom_text(aes(x = -1.8, y = -0.9, label = "Stress = 0.15\nDisturbance - P = 0.001\nCoast - P = 0.001\nDisturbance X Coast - P = 0.002"),
             hjust = 0, size = 4) +
   labs(title = "b. COTS and Cyclone") +
   scale_linetype_manual(values = c("Pre-disturbance" = "solid", "Post-disturbance" = "dashed")) + 
@@ -661,7 +680,7 @@ bl_fish.cent <- merge(bl_fish.cent, meta_df, by = "Coast_year")
   geom_text_repel(fish.species.scores, mapping = aes(x = NMDS1, y = NMDS2, label = Species), max.overlaps = 15, alpha = 0.5) +
   geom_path(bl_fish.cent, mapping = aes(x = NMDS1, y = NMDS2, colour = Coast),
             arrow = arrow(length=unit(0.4,"cm"), ends="last", type = "closed"), size = 1) +
-  geom_text(aes(x = 3.2, y = 1.05, label = "Stress = 0.13\nDisturbance - P = 0.001\nCoast - P = 0.002\nDisturbance X Coast - P = 0.27"),
+  geom_text(aes(x = 3.2, y = 1, label = "Stress = 0.14\nDisturbance - P = 0.001\nCoast - P = 0.002\nDisturbance X Coast - P = 0.29"),
             hjust = 1, size = 4) +
   scale_x_continuous(limits = c(-1.5, 3.2)) +
   labs(title = "c. Bleaching") +
@@ -685,7 +704,7 @@ bl_fish.cent <- merge(bl_fish.cent, meta_df, by = "Coast_year")
 ```{r fish nmds panel, fig.height=12, fig.width=11}
 (biomass_ord_panel <- ggarrange(fish_nmds, ggarrange(cc_fish_nmds, bl_fish_nmds, ncol = 2, nrow = 1, legend = "none"), nrow = 2, heights = c(0.6, 0.4), common.legend = T, legend.grob = get_legend(cc_fish_nmds), legend = "bottom"))
 
-# ggsave(filename = "output/biomass_ordination.png", biomass_ord_panel, height = 12, width = 11)
+# ggsave(filename = "output/biomass_ordination_v2.png", biomass_ord_panel, height = 12, width = 11)
 ```
 
 ```{r calculate nutrients}
@@ -920,7 +939,7 @@ for(i in 1:length(nutrient_cols)){ # for each nutrient column
 (omega_biomass <-
   ggplot() +
   geom_point(data = nutrients_and_biomass, aes(x = Biomass_total, y = Omega3_total, colour = Coast), size = 3) +
-    geom_text(aes(x = 115000, y = 8, label = "tau == 0.98"), size = 8, parse = T, hjust = 1) +
+    geom_text(aes(x = 115000, y = 6, label = "tau == 0.96"), size = 8, parse = T, hjust = 1) +
    labs(y = "Omega 3 (mg) \n",
         x = "Biomass", title = "b. Omega 3") +
   theme_classic()  +
@@ -941,7 +960,7 @@ for(i in 1:length(nutrient_cols)){ # for each nutrient column
 (calcium_biomass <-
   ggplot() +
   geom_point(data = nutrients_and_biomass, aes(x = Biomass_total, y = Calcium_total, colour = Coast), size = 3) +
-    geom_text(aes(x = 115000, y = 3000, label = "tau == 0.92"), size = 8, parse = T, hjust = 1) +
+    geom_text(aes(x = 115000, y = 3000, label = "tau == 0.90"), size = 8, parse = T, hjust = 1) +
    labs(y = "Calcium (mg) \n",
         x = "Biomass", title = "c. Calcium") +
   theme_classic() +
@@ -983,7 +1002,7 @@ for(i in 1:length(nutrient_cols)){ # for each nutrient column
 (vitaminA_biomass <-
   ggplot() +
   geom_point(data = nutrients_and_biomass, aes(x = Biomass_total, y = VitaminA_total, colour = Coast), size = 3) +
-    geom_text(aes(x = 115000, y = 1000, label = "tau == 0.81"), size = 8, parse = T, hjust = 1) +
+    geom_text(aes(x = 115000, y = 2000, label = "tau == 0.83"), size = 8, parse = T, hjust = 1) +
    labs(y = "Vitamin A (mg) \n",
         x = "Biomass", title = "e. Vitamin A") +
   theme_classic() +
@@ -1004,7 +1023,7 @@ for(i in 1:length(nutrient_cols)){ # for each nutrient column
 (selenium_biomass <-
   ggplot() +
   geom_point(data = nutrients_and_biomass, aes(x = Biomass_total, y = Selenium_total, colour = Coast), size = 3) +
-    geom_text(aes(x = 115000, y = 1000, label = "tau == 0.91"), size = 8, parse = T, hjust = 1) +
+    geom_text(aes(x = 115000, y = 1000, label = "tau == 0.88"), size = 8, parse = T, hjust = 1) +
    labs(y = "Selenium (mg) \n",
         x = "Biomass", title = "f. Selenium") +
   theme_classic() +
@@ -1025,7 +1044,7 @@ for(i in 1:length(nutrient_cols)){ # for each nutrient column
 (zinc_biomass <-
   ggplot() +
   geom_point(data = nutrients_and_biomass, aes(x = Biomass_total, y = Zinc_total, colour = Coast), size = 3) +
-  geom_text(aes(x = 115000, y = 100, label = "tau == 0.73"), size = 8, parse = T, hjust = 1) +
+  geom_text(aes(x = 115000, y = 100, label = "tau == 0.75"), size = 8, parse = T, hjust = 1) +
    labs(y = "Protein (mg) \n",
         x = "Biomass", title = "g. Zinc") +
   theme_classic() +
@@ -1047,7 +1066,7 @@ for(i in 1:length(nutrient_cols)){ # for each nutrient column
 ```{r nutrients panel graph, fig.height = 8, fig.width=20}
 (nutrient_corr_panel <- ggarrange(protein_biomass, omega_biomass, calcium_biomass, iron_biomass, selenium_biomass, vitaminA_biomass, zinc_biomass, nrow = 2, ncol = 4, common.legend = T, legend = "bottom"))
 
-# ggsave(filename = "output/biomass_nutrients_corr.png", nutrient_corr_panel, height = 8, width = 20)
+# ggsave(filename = "output/biomass_nutrients_corr_v2.png", nutrient_corr_panel, height = 8, width = 20)
 ```
 
 ```{r nutrients ordination setup and permanova}
@@ -1068,9 +1087,11 @@ nutrients_matrix <- log(nutrients_matrix+1)
 # perform permanova
 adonis2(nutrients_matrix ~ Coast*Year, data = nutrients_wide, method = "bray")
 #             Df SumOfSqs      R2       F Pr(>F)    
-# Coast        2   0.7651 0.05932 28.9246  0.001 ***
-# Year         1   0.6602 0.05119 49.9187  0.001 ***
-# Coast:Year   2   0.1646 0.01276  6.2211  0.001 ***
+# Coast        2   0.4751 0.03721 17.8388  0.001 ***
+# Year         1   0.6346 0.04970 47.6528  0.001 ***
+# Coast:Year   2   0.2600 0.02036  9.7612  0.001 ***
+# Residual   856  11.3994 0.89273                   
+# Total      861  12.7690 1.00000   
 
 
 #### compare effects of specific disturbances
@@ -1090,10 +1111,12 @@ cc_nutrients_matrix <- nutrients_matrix[which(rownames(nutrients_matrix) %in% cc
 
 # test effects of cyclone
 adonis2(cc_nutrients_matrix ~ Coast*Pre.post, data = cc_nutrients_comb, method = "bray")
-#                Df SumOfSqs      R2       F Pr(>F)    
-#Coast            2   0.6131 0.07557 20.7152  0.001 ***
-#Pre.post         1   0.4740 0.05843 32.0353  0.001 ***
-#Coast:Pre.post   2   0.0559 0.00689  1.8877  0.126    
+#                 Df SumOfSqs      R2       F Pr(>F)    
+# Coast            2   0.5196 0.06531 17.6573  0.001 ***
+# Pre.post         1   0.4345 0.05461 29.5284  0.001 ***
+# Coast:Pre.post   2   0.0566 0.00711  1.9226  0.111    
+# Residual       472   6.9446 0.87296                   
+# Total          477   7.9552 1.00000    
   
 
 
@@ -1114,9 +1137,11 @@ bl_nutrients_matrix <- nutrients_matrix[which(rownames(nutrients_matrix) %in% bl
 # test effects of bleaching
 adonis2(bl_nutrients_matrix ~ Coast*Pre.post, data = bl_nutrients_comb, method = "bray")
 #                 Df SumOfSqs      R2       F Pr(>F)    
-# Coast            2   0.3456 0.07655 16.0757  0.001 ***
-# Pre.post         1   0.0686 0.01519  6.3799  0.005 ** 
-# Coast:Pre.post   2   0.0375 0.00831  1.7448  0.175    
+# Coast            2   0.2274 0.05027 10.2711  0.001 ***
+# Pre.post         1   0.0689 0.01524  6.2260  0.014 *  
+# Coast:Pre.post   2   0.0431 0.00952  1.9443  0.126    
+# Residual       378   4.1849 0.92498                   
+# Total          383   4.5243 1.00000   
 
 
 ```
@@ -1153,7 +1178,7 @@ nutrients.cent <- merge(nutrients.cent, meta_df, by = "Coast_year")
   geom_text(nutrients.species.scores, mapping = aes(x = NMDS1, y = NMDS2, label = Nutrient)) +
   geom_path(nutrients.cent, mapping = aes(x = NMDS1, y = NMDS2, colour = Coast),
             arrow = arrow(length=unit(0.4,"cm"), ends="last", type = "closed"), size = 1) +
-  geom_text(aes(x = -0.5, y = -0.07, label = "Stress = 0.04\nYear - P = 0.001\nCoast - P = 0.001\nYear X Coast - P = 0.001"),
+  geom_text(aes(x = -0.5, y = -0.115, label = "Stress = 0.04\nYear - P = 0.001\nCoast - P = 0.001\nYear X Coast - P = 0.001"),
             hjust = 0, size = 5) +
   
   labs(title = "a. Nutrients") +
@@ -1209,7 +1234,7 @@ cc_nutrients.cent <- merge(cc_nutrients.cent, meta_df, by = "Coast_year")
 set.seed(1032) 
 # conduct nmds - this takes a while
 bl_nutrients_ord <- metaMDS(bl_nutrients_matrix, dist	= "bray", k = 2) 
-bl_nutrients_ord # stress = 0.04 
+bl_nutrients_ord # stress = 0.05 
 
 # extract species scores
 bl_nutrients.species.scores <- as.data.frame(scores(bl_nutrients_ord, "species")) 
@@ -1245,8 +1270,8 @@ bl_nutrients.cent <- merge(bl_nutrients.cent, meta_df, by = "Coast_year")
   geom_text_repel(nutrients.species.scores, mapping = aes(x = NMDS1, y = NMDS2, label = Nutrient), max.overlaps = 14) +
   geom_path(cc_nutrients.cent, mapping = aes(x = NMDS1, y = NMDS2, colour = Coast),
             arrow = arrow(length=unit(0.4,"cm"), ends="last", type = "closed"), size = 1) +
-  geom_text(aes(x = -0.5, y = -0.07,
-                label = "Stress = 0.04\nDisturbance - P = 0.001\nCoast - P = 0.001\nDisturbance X Coast - P = 0.13"),
+  geom_text(aes(x = -0.5, y = -0.135,
+                label = "Stress = 0.04\nDisturbance - P = 0.001\nCoast - P = 0.001\nDisturbance X Coast - P = 0.11"),
             hjust = 0, size = 4) +
   labs(title = "b. COTS and Cyclone") +
   scale_linetype_manual(values = c("Pre-disturbance" = "solid", "Post-disturbance" = "dashed")) + 
@@ -1274,8 +1299,8 @@ bl_nutrients.cent <- merge(bl_nutrients.cent, meta_df, by = "Coast_year")
   stat_ellipse(data = bl_nutrients.site.scores, 
                  mapping = aes(x = NMDS1, y = NMDS2, group = Disturbance_coast, linetype = Disturbance, color = Coast), type = "t") +
   geom_text_repel(nutrients.species.scores, mapping = aes(x = NMDS1, y = NMDS2, label = Nutrient), max.overlaps = 14) +
-  geom_text(aes(x = -0.5, y = -0.07,
-            label = "Stress = 0.04\nDisturbance - P = 0.001\nCoast - P = 0.005\nDisturbance X Coast - P = 0.18"),
+  geom_text(aes(x = -0.4, y = -0.07,
+            label = "Stress = 0.05\nDisturbance - P = 0.001\nCoast - P = 0.01\nDisturbance X Coast - P = 0.13"),
         hjust = 0, size = 4) +
   geom_path(bl_nutrients.cent, mapping = aes(x = NMDS1, y = NMDS2, colour = Coast),
             arrow = arrow(length=unit(0.4,"cm"), ends="last", type = "closed"), size = 1) +
@@ -1301,7 +1326,7 @@ bl_nutrients.cent <- merge(bl_nutrients.cent, meta_df, by = "Coast_year")
 (nutrients_ord_panel <- 
    ggarrange(nutrients_nmds, ggarrange(cc_nutrients_nmds, bl_nutrients_nmds, ncol = 2, nrow = 1, legend = "none"), ncol = 1, nrow = 2, widths = c(0.6, 0.4), common.legend = T, legend.grob = get_legend(cc_nutrients_nmds), legend = "bottom") )
 
-# ggsave(filename = "output/nutrients_ordination.png", nutrients_ord_panel, height = 12, width = 11)
+# ggsave(filename = "output/nutrients_ordination_v2.png", nutrients_ord_panel, height = 12, width = 11)
 ```
 
 ```{r multi panel graph, fig.height=7, fig.width=14}
